# duckdb-semantic-views

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  MAINTAINER.md  Makefile  README.md  TECH-DEBT.md  build.rs  deny.toml  description.yml  ruff.toml
.cargo-husky/hooks/: pre-commit
.doc-writer/: config.yaml  context.md  editor-report.md  gap-report.md  page-inventory.md  persona-report-data-engineers-exploring-semantic-views.md  persona-report.md  scenarios.yaml  sphinx-shibuya.md  terminology.yaml
.github/: dependabot.yml
.github/workflows/: Build.yml  BuildAll.yml  BuildQuick.yml  CodeQuality.yml  Docs.yml  DocsCheck.yml  DuckDBVersionMonitor.yml  Fuzz.yml  IntegrationChecks.yml  MainDistributionPipeline.yml  NightlyFuzz.yml  PublishExtension.yml  PullRequestCI.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  agent-history.json  config.json  v0.10.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.5-MILESTONE-AUDIT.md  v0.5-REQUIREMENTS.md  v0.5-ROADMAP.md  v0.5.1-MILESTONE-AUDIT.md  v0.5.1-REQUIREMENTS.md  v0.5.1-ROADMAP.md  v0.5.2-MILESTONE-AUDIT.md  v0.5.2-REQUIREMENTS.md  v0.5.2-ROADMAP.md  v0.5.3-MILESTONE-AUDIT.md  v0.5.3-REQUIREMENTS.md  v0.5.4-MILESTONE-AUDIT.md  v0.5.4-REQUIREMENTS.md  v0.5.4-ROADMAP.md  v0.5.5-MILESTONE-AUDIT.md  v0.5.5-REQUIREMENTS.md  v0.5.5-ROADMAP.md  v0.6.0-MILESTONE-AUDIT.md  v0.6.0-REQUIREMENTS.md  v0.6.0-ROADMAP.md  v0.7.0-REQUIREMENTS.md  v0.7.0-ROADMAP.md  v0.8.0-MILESTONE-AUDIT.md  v0.8.0-REQUIREMENTS.md  v0.8.0-ROADMAP.md  v0.9.0-REQUIREMENTS.md  v0.9.0-ROADMAP.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_notes/: architecture.md  code-review-2026-04-04.md  code-review-2026-07-02.md  code-review-2026-07-11.md  code-review-2026-07-16.md  code-review-2026-07-18.md  demo.py  entry-point-decision.md  error_with_adbc.md  multi-source-semantic-views.md  semantic-views-duckdb-design-doc.md  snowflake-grain-parity-feasibility.md  v0.8.0_phase_62_sqllogictest_spike.md  v0.8.0_phase_62_ultraplan.md  v0.9.1_readonly_reopen_hang.md  vector-copy-research.md
configure/: setup_ducklake.py
cpp/include/: parser_extension_compat.hpp
cpp/src/: shim.cpp  shim.hpp
docs/: changelog.md  conf.py  index.rst  pyproject.toml
docs/_ext/: duckdb_sql_lexer.py  sqlgrammar_lexer.py
docs/explanation/: databricks-comparison.rst  index.rst  semantic-views-vs-regular-views.rst  snowflake-comparison.rst  transactional-ddl-and-limitations.rst
docs/how-to/: data-sources.rst  derived-metrics.rst  facts.rst  fan-traps.rst  index.rst  materializations.rst  metadata-annotations.rst  query-facts.rst  role-playing-dimensions.rst  semi-additive-metrics.rst  wildcard-selection.rst  window-metrics.rst  yaml-definitions.rst
docs/reference/: alter-semantic-view.rst  create-semantic-view.rst  describe-semantic-view.rst  drop-semantic-view.rst  error-messages.rst  explain-semantic-view-function.rst  get-ddl.rst  index.rst  read-yaml-from-semantic-view.rst  semantic-view-function.rst  show-columns-semantic-view.rst  show-semantic-dimensions-for-metric.rst  show-semantic-dimensions.rst  show-semantic-facts.rst  show-semantic-materializations.rst  show-semantic-metrics.rst  show-semantic-views.rst  yaml-format.rst
docs/tutorials/: building-a-model.rst  getting-started.rst  index.rst  multi-table.rst
examples/: advanced_features.py  basic_ddl_and_query.py  metadata_and_metrics.py  race_guards_and_unification.py  readonly_load.py  snowflake_parity.py  transactional_ddl.py  type_inference.py  yaml_and_materializations.py
fuzz/: Cargo.toml
fuzz/corpus/fuzz_json_parse/: seed_valid_full.json  seed_valid_minimal.json
fuzz/fuzz_targets/: fuzz_ddl_parse.rs  fuzz_json_parse.rs  fuzz_keyword_body.rs  fuzz_parser_override_ffi.rs  fuzz_query_names.rs  fuzz_render_roundtrip.rs  fuzz_sql_expand.rs  fuzz_yaml_parse.rs
fuzz/seeds/fuzz_ddl_parse/: seed_annotation_keywords_in_strings.txt  seed_basic.txt  seed_facts.txt  seed_facts_and_hierarchies.txt  seed_facts_chain.txt  seed_hierarchies.txt  seed_homoglyph.txt  seed_long.txt  seed_non_ascii_utf8.txt  seed_null_byte.txt  seed_phase64_mixed_quoting.txt  seed_phase64_quoted_bare.txt  seed_phase64_quoted_fqn.txt  seed_tab_ws.txt
fuzz/seeds/fuzz_json_parse/: malformed.json  minimal_valid.json  valid_complete.json  with_joins.json
fuzz/seeds/fuzz_keyword_body/: seed_annotations.txt  seed_basic.txt  seed_constraint_quoted_comma.txt  seed_full.txt  seed_materializations.txt  seed_non_ascii.txt  seed_quoted_specials.txt
fuzz/seeds/fuzz_parser_override_ffi/: seed_comment_prefix.txt  seed_create_body.txt  seed_drop_alter.txt  seed_non_ddl.txt  seed_show_clauses.txt  seed_show_dims_for_metric.txt  seed_yaml_dollar.txt
fuzz/seeds/fuzz_render_roundtrip/: seed_basic.txt
fuzz/seeds/fuzz_yaml_parse/: seed_malformed.yaml  seed_minimal.yaml  seed_relationships.yaml
proptest-regressions/: expr_tokens.txt  util.txt
scripts/: changelog_add_bullet.py  changelog_release.py  fetch_amalgamation_offline.py  patch_sqllogictest.py
src/: body_parser.rs  catalog.rs  conn_guard.rs  errors.rs  expand.rs  expr_tokens.rs  ffi_util.rs  graph.rs  ident.rs  lib.rs  model.rs  parse.rs  render_ddl.rs  render_yaml.rs  sql_lit.rs  type_cache.rs  util.rs
src/body_parser/: annotations.rs  clause_bounds.rs  cursor.rs  entries.rs  lexer.rs  materializations.rs  metrics.rs  mod.rs  relationships.rs  scan.rs  tables.rs  window.rs
src/catalog/: mod.rs  writes.rs
src/ddl/: alter.rs  alter_helpers_ffi.rs  (+17 more)
tests/: create_front_door_proptest.rs  crlf_body_frontdoor.rs  differential_proptest.rs  expand_proptest.rs  multi_hop_join_proptest.rs  no_long_lived_conn.rs  output_proptest.rs  parse_proptest.rs  parser_hook_idempotent.rs  quoted_idents_regression.rs  registration_error_surfaces.rs  roundtrip_proptest.rs  semi_additive_proptest.rs  star_schema_proptest.rs  vector_reference_test.rs  window_metric_proptest.rs  yaml_proptest.rs
(+884 files in other folders)
