[package]
name = "semantic_views"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension providing semantic views — a declarative layer for dimensions, measures, and relationships"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
duckdb = { version = "=1.4.4", features = ["loadable-extension", "vscalar"] }
libduckdb-sys = "=1.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
lto = true
strip = true

[workspace.lints.clippy]
# Use priority = -1 so individual lint overrides take precedence over the group
pedantic = { level = "deny", priority = -1 }
# Suppress known-noisy pedantic rules per RESEARCH.md
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints]
workspace = true
