[package]
name = "semantic_views"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension providing semantic views — a declarative layer for dimensions, measures, and relationships"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
# `bundled` is the default — it compiles DuckDB from source and links it
# into the binary. This enables Connection::open_in_memory() in unit tests
# (`cargo test` uses default features).
#
# `extension` enables duckdb/loadable-extension + duckdb/vscalar, required
# for DuckDB to load this cdylib. The Makefile passes
# `--no-default-features --features extension` when building for DuckDB.
#
# When building for DuckDB:
#   cargo build --no-default-features --features extension
#   (lean binary — no bundled DuckDB, uses function-pointer stubs)
#
# When running unit tests (default):
#   cargo test
#   (bundled DuckDB — Connection::open_in_memory() works)
default = ["duckdb/bundled"]
extension = ["duckdb/loadable-extension", "duckdb/vscalar"]

[dependencies]
duckdb = { version = "=1.4.4", default-features = false }
libduckdb-sys = "=1.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
lto = true
strip = true

[workspace.lints.clippy]
# Use priority = -1 so individual lint overrides take precedence over the group
pedantic = { level = "deny", priority = -1 }
# Suppress known-noisy pedantic rules per RESEARCH.md
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints]
workspace = true
