[package]
name = "semantic_views"
version = "0.10.3"
edition = "2021"
description = "DuckDB extension providing semantic views тАФ a declarative layer for dimensions, measures, and relationships"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# `bundled` is the default тАФ it compiles DuckDB from source and links it
# into the binary. This enables Connection::open_in_memory() in unit tests
# (`cargo test` uses default features).
#
# `extension` enables duckdb/loadable-extension + duckdb/vscalar, required
# for DuckDB to load this cdylib. The Makefile passes
# `--no-default-features --features extension` when building for DuckDB.
#
# When building for DuckDB:
#   cargo build --no-default-features --features extension
#   (lean binary тАФ no bundled DuckDB, uses function-pointer stubs)
#
# When running unit tests (default):
#   cargo test
#   (bundled DuckDB тАФ Connection::open_in_memory() works)
default = ["duckdb/bundled"]
extension = ["duckdb/loadable-extension", "duckdb/vscalar", "dep:cc"]
arbitrary = ["dep:arbitrary"]

[dependencies]
duckdb = { version = "=1.10503.0", default-features = false }
libduckdb-sys = "=1.10503.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
strsim = "0.11"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
proptest = "1.11"
# `syn` powers `tests/no_long_lived_conn.rs` тАФ Phase 65 (v0.10.0) Plan 06's
# structural guard that asserts `init_extension` allocates no long-lived
# `duckdb_connection`. The `full` feature is needed for function-body parsing;
# `visit` for the AST walker trait. Transitively available via several
# duckdb-rs build deps, but pinned explicitly here so the guard test does
# not regress if those deps drop syn.
syn = { version = "2", features = ["full", "visit"] }
# `walkdir` powers `tests/no_long_lived_conn.rs::no_duckdb_disconnect_anywhere_in_src`
# тАФ Phase 65.1 (v0.10.0) Plan 03b's defence-in-depth AST walker that scans
# every `src/**/*.rs` file for `duckdb_disconnect` call sites. The
# BorrowedConnection newtype (D-10) is the primary type-level guard; this
# walker (D-11) catches any path that bypasses the newtype (e.g., a raw
# `ffi::duckdb_connection` re-introduced inadvertently).
walkdir = "2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
lto = true
strip = true

[workspace.lints.clippy]
# Use priority = -1 so individual lint overrides take precedence over the group
pedantic = { level = "deny", priority = -1 }
# Suppress known-noisy pedantic rules per RESEARCH.md
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints]
workspace = true
