[package]
name = "semantic-views-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
semantic_views = { path = "..", features = ["arbitrary"] }
# Symmetric (de)serializers for the JSON / YAML parse-target round-trip oracles.
# Kept at the same versions the parent crate pins so resolution is a no-op.
serde_json = "1"
yaml_serde = "0.10"

# Prevent this from being absorbed into the parent workspace
[workspace]

[[bin]]
name = "fuzz_json_parse"
path = "fuzz_targets/fuzz_json_parse.rs"
doc = false

[[bin]]
name = "fuzz_sql_expand"
path = "fuzz_targets/fuzz_sql_expand.rs"
doc = false

[[bin]]
name = "fuzz_query_names"
path = "fuzz_targets/fuzz_query_names.rs"
doc = false

[[bin]]
name = "fuzz_ddl_parse"
path = "fuzz_targets/fuzz_ddl_parse.rs"
doc = false

[[bin]]
name = "fuzz_yaml_parse"
path = "fuzz_targets/fuzz_yaml_parse.rs"
doc = false

[[bin]]
name = "fuzz_parser_override_ffi"
path = "fuzz_targets/fuzz_parser_override_ffi.rs"
doc = false

[[bin]]
name = "fuzz_keyword_body"
path = "fuzz_targets/fuzz_keyword_body.rs"
doc = false

[[bin]]
name = "fuzz_render_roundtrip"
path = "fuzz_targets/fuzz_render_roundtrip.rs"
doc = false
